--- a/vignettes/geo_api.Rmd
+++ b/vignettes/geo_api.Rmd
@@ -37,8 +37,16 @@ output<-GET(url=totalurl)
 http_status(output)
 
 data<-content(output)
+latitude<-data$results[[1]]$geometry$location$lat
 
-return(data)
+longitude<-data$results[[1]]$geometry$location$lng
+
+location<-data$results[[1]]$formatted_address
+
+final<-data.frame(latitude,longitude,location)
+
+return(final)
+
 }
 
 ```
@@ -55,19 +63,16 @@ return(data)
 library(RWebApi)
 
 test_that("Checking if the output is same",{
-  expect_that((geo_api("Paris,France")$results[[1]]$geometry$location$lat),equals(48.856614))
-  expect_that(geo_api("Paris,France")$results[[1]]$geometry$location$lng,equals(2.3522219))
-  expect_that(geo_api("Paris,France")$results[[1]]$formatted_address,equals("Paris, France"))
+  expect_that(geo_api("Paris,France")$latitude,equals(48.856614))
+  expect_that(geo_api("Paris,France")$longitude,equals(2.3522219))
+  expect_that(geo_api("Lahore")$latitude,equals(31.5546061))
+  expect_that(geo_api("Lahore")$longitude,equals(74.3571581))
+  expect_that(geo_api("Asmara")$latitude,equals(15.3228767))
+  expect_that(geo_api("Asmara")$longitude,equals(38.9250517))
   
 }
 )
 
-test_that("Test for Invalid Input",{
-  
-  expect_that(geo_api("???")$status,equals("ZERO_RESULTS"))
-  
-}
-)
 ```
 
 
